--- a/packages/fluent/scss/timeselector/_variables.scss
+++ b/packages/fluent/scss/timeselector/_variables.scss
@@ -7,23 +7,23 @@
 $kendo-time-selector-border-width: 1px !default;
 /// Font family of the time-selector.
 /// @group time-selector
-$kendo-time-selector-font-family: var(--kendo-font-family, inherit ) !default;
+$kendo-time-selector-font-family: var( --kendo-font-family, inherit ) !default;
 /// Font size of the time-selector.
 /// @group time-selector
-$kendo-time-selector-font-size:  var(--kendo-font-size, inherit ) !default;
+$kendo-time-selector-font-size:  var( --kendo-font-size, inherit ) !default;
 /// Line height of the time-selector.
 /// @group time-selector
-$kendo-time-selector-line-height: var(--kendo-line-height, normal ) !default;
+$kendo-time-selector-line-height: var( --kendo-line-height, normal ) !default;
 
 /// Background color of the time-selector.
 /// @group time-selector
-$kendo-time-selector-bg: var(--kendo-component-bg, initial) !default;
+$kendo-time-selector-bg: var( --kendo-component-bg, initial ) !default;
 /// Text color of the time-selector.
 /// @group time-selector
-$kendo-time-selector-text: var(--kendo-component-text, initial) !default;
+$kendo-time-selector-text: var( --kendo-component-text, initial ) !default;
 /// Border color of the time-selector.
 /// @group time-selector
-$kendo-time-selector-border: var(--kendo-component-border, initial) !default;
+$kendo-time-selector-border: var( --kendo-component-border, initial ) !default;
 
 /// Horizontal padding of the time-selector header.
 /// @group time-selector
@@ -42,16 +42,19 @@ $kendo-time-list-width: 4em !default;
 /// @group time-selector
 $kendo-time-list-height: 240px !default;
 
+/// Spacing beneath the time selector titles.
+/// @group time-selector
+$kendo-time-list-title-spacing: map-get( $kendo-spacing, 3 ) !default;
 /// Font size of the time-selector titles.
 /// @group time-selector
-$kendo-time-list-title-font-size: var(--kendo-font-size-xs, inherit ) !default;
+$kendo-time-list-title-font-size: var( --kendo-font-size-xs, inherit ) !default;
 /// Line height of the time-selector titles.
 /// @group time-selector
-$kendo-time-list-title-line-height: var(--kendo-line-height-lg, inherit ) !default;
-$kendo-time-list-title-height: calc( $kendo-time-list-title-font-size * $kendo-time-list-title-line-height) !default;
+$kendo-time-list-title-line-height: var( --kendo-line-height-lg, inherit ) !default;
+$kendo-time-list-title-height: calc( $kendo-time-list-title-font-size * $kendo-time-list-title-line-height ) !default;
 /// Text color of the time-selector titles.
 /// @group time-selector
-$kendo-time-list-title-text: var(--kendo-subtle-text, inherit ) !default;
+$kendo-time-list-title-text: var( --kendo-subtle-text, inherit ) !default;
 /// Text color of the focused time-selector titles.
 /// @group time-selector
 $kendo-time-list-title-focus-text: $kendo-time-selector-text !default;
