chore(numerictextbox): fix redundant border in flat input in fluent

--- a/packages/fluent/scss/input/_layout.scss
+++ b/packages/fluent/scss/input/_layout.scss
@@ -81,8 +81,9 @@
         }
     }
 
-    // Solid Numeric Textbox
-    .k-numerictextbox.k-input-solid {
+    // Solid and flat Numeric Textbox
+    .k-numerictextbox.k-input-solid,
+    .k-numerictextbox.k-input-flat  {
 
         .k-spinner-increase,
         .k-spinner-decrease {
