feat(splitter): add fluent styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -119,7 +119,7 @@
 @use "card";
 @use "expansion-panel";
 @use "panelbar";
-// @use "splitter";
+@use "splitter";
 @use "tilelayout";
 
 
@@ -281,7 +281,7 @@
     @include card.styles();
     @include expansion-panel.styles();
     @include panelbar.styles();
-    // @include splitter.styles();
+    @include splitter.styles();
     @include tilelayout.styles();
 
 
