chore(fluent): update fluent palettes

--- a/packages/fluent/scss/core/color-system/_palettes.scss
+++ b/packages/fluent/scss/core/color-system/_palettes.scss
@@ -4,15 +4,25 @@ $kendo-fluent-palettes: (
         10: #eff6fc,
         20: #deecf9,
         30: #c7e0f4,
-        40: #a6cfef,
-        50: #85bde9,
-        60: #64ace4,
-        90: #429bdf,
-        110: #2189d9,
-        130: #0078d4,
-        150: #106ebe,
-        160: #005a9e,
-        190: #004578
+        40: #abd1ef,
+        50: #8ec2eb,
+        60: #72b3e6,
+        70: #55a5e2,
+        80: #3996dd,
+        90: #1c87d9,
+        100: #0078d4,
+        110: #106ebe,
+        120: #005a9e,
+        130: #004578,
+        140: #0f416c,
+        150: #153b60,
+        160: #173655,
+        170: #18304a,
+        180: #182a3f,
+        190: #162435,
+        200: #131d29,
+        210: #0e151e,
+        220: #070B10
     ),
     neutral: (
         10: #faf9f8,
@@ -21,12 +31,22 @@ $kendo-fluent-palettes: (
         40: #e1dfdd,
         50: #d2d0ce,
         60: #c8c6c4,
+        70: #bdbbb8,
+        80: #b3b0ad,
         90: #a19f9d,
+        100: #979593,
         110: #8a8886,
+        120: #797775,
         130: #605e5c,
+        140: #484644,
         150: #3b3a39,
         160: #323130,
-        190: #201f1e
+        170: #292827,
+        180: #252423,
+        190: #201f1e,
+        200: #1b1a19,
+        210: #161514,
+        220: #11100f
     ),
     error: (
         10: #fef3f4,
@@ -47,7 +67,10 @@ $kendo-fluent-palettes: (
         160: #be3a34,
         170: #b73029,
         180: #af251f,
-        190: #a80000
+        190: #a80000,
+        200: #77231c,
+        210: #4d211d,
+        220: #251616
     ),
     success: (
         10: #effbee,
@@ -68,7 +91,10 @@ $kendo-fluent-palettes: (
         160: #388f3e,
         170: #2e893b,
         180: #238338,
-        190: #107c10
+        190: #107c10,
+        200: #1d5d34,
+        210: #193e2c,
+        220: #10211d
     ),
     warning: (
         10: #fff9e7,
@@ -89,7 +115,10 @@ $kendo-fluent-palettes: (
         160: #a38f69,
         170: #94876e,
         180: #877f72,
-        190: #797775
+        190: #797775,
+        200: #555557,
+        210: #35373b,
+        220: #1a1c20
     ),
     info: (
         10: #e7f2ff,
@@ -102,15 +131,42 @@ $kendo-fluent-palettes: (
         80: #3b98ff,
         90: #238bff,
         100: #0a7eff,
-        110: #376bb2,
-        120: #3465ae,
-        130: #305ea9,
-        140: #2d58a5,
-        150: #2b52a0,
-        160: #284d9c,
-        170: #264798,
-        180: #234194,
-        190: #1f3c90
+        110: #0974eb,
+        120: #086bd8,
+        130: #0861c4,
+        140: #0757b1,
+        150: #064e9d,
+        160: #054489,
+        170: #053a76,
+        180: #043062,
+        190: #03274e,
+        200: #021d3b,
+        210: #021327,
+        220: #010a14
+    ),
+    tertiary: (
+        10: #eaf3fb,
+        20: #deecf9,
+        30: #bfdbf3,
+        40: #aacfef,
+        50: #95c3ec,
+        60: #80b8e8,
+        70: #6bace4,
+        80: #55a0e0,
+        90: #4094dc,
+        100: #2b88d8,
+        110: #287ec7,
+        120: #2473b7,
+        130: #2169a6,
+        140: #1e5e96,
+        150: #1a5485,
+        160: #174974,
+        170: #143f64,
+        180: #113453,
+        190: #0d2a42,
+        200: #0a1f32,
+        210: #071521,
+        220: #030a11
     ),
     series-a: (
         10: #bfe6ee,
