--- a/packages/fluent/scss/radio/_variables.scss
+++ b/packages/fluent/scss/radio/_variables.scss
@@ -79,7 +79,7 @@ $kendo-radio-hover-color: get-theme-color-var( neutral-130 )!default;
 
 /// Border of hovered and checked radio.
 /// @group checkbox
-$kendo-radio-checked-hover-border: get-theme-color-var( primary-150 ) !default;
+$kendo-radio-checked-hover-border: get-theme-color-var( primary-110 ) !default;
 
 /// Top position of checked radio button.
 /// @group checked
@@ -101,7 +101,7 @@ $kendo-radio-checked-height: calc( $kendo-radio-height / 2 ) !default;
 $kendo-radio-checked-bg: var( --kendo-component-bg, initial ) !default;
 /// Color of checked radio button.
 /// @group radio
-$kendo-radio-checked-text: get-theme-color-var( primary-130 ) !default;
+$kendo-radio-checked-text: get-theme-color-var( primary-100 ) !default;
 /// Border color of checked radio button.
 /// @group radio
 $kendo-radio-checked-border: $kendo-checkbox-checked-border !default;
@@ -127,7 +127,7 @@ $kendo-radio-disabled-bg: $kendo-checkbox-disabled-bg !default;
 $kendo-radio-disabled-text: $kendo-checkbox-disabled-text !default;
 /// Border color of disabled radio button.
 /// @group radio
-$kendo-radio-disabled-border: get-theme-color( neutral, 60 ) !default;
+$kendo-radio-disabled-border: get-theme-color-var( neutral-60 ) !default;
 
 /// Background color of disabled and checked radio button.
 /// @group radio
