chore(list): use primary color for list item icons

--- a/packages/fluent/scss/list/_theme.scss
+++ b/packages/fluent/scss/list/_theme.scss
@@ -68,6 +68,13 @@
         }
     }
 
+    // Icon
+    .k-list-item .k-icon {
+        @include fill(
+            $color: var( --kendo-list-item-icon-text, #{$kendo-list-item-icon-text} )
+        );
+    }
+
 
     // List group item
     .k-list-group-item {
