--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -147,7 +147,7 @@
 // Misc
 // @use "adaptive";
 // @use "chat";
-// @use "mediaplayer";
+@use "mediaplayer";
 // @use "timeline";
 // @use "pdf-viewer";
 // @use "scroller";
@@ -309,7 +309,7 @@
     // Misc
     // @include adaptive.styles();
     // @include chat.styles();
-    // @include mediaplayer.styles();
+    @include mediaplayer.styles();
     // @include timeline.styles();
     // @include pdf-viewer.styles();
     // @include scroller.styles();
