chore(panelbar): set transition fallback value to none

--- a/packages/fluent/scss/panelbar/_layout.scss
+++ b/packages/fluent/scss/panelbar/_layout.scss
@@ -50,7 +50,7 @@
                 position: relative;
                 user-select: none;
                 cursor: default;
-                transition: var( --kendo-transition, #{$kendo-transition} );
+                transition: var( --kendo-transition, none );
 
                 &.k-selected {
                     font-weight: var( --kendo-font-weight-bold, #{$kendo-font-weight-bold} );
