--- a/packages/default/scss/signature/_layout.scss
+++ b/packages/default/scss/signature/_layout.scss
@@ -39,6 +39,7 @@
 
     .k-signature-line {
         position: absolute;
+        bottom: $kendo-signature-line-bottom-offset;
         z-index: 0;
         border-bottom-width: $kendo-signature-line-width;
         border-bottom-style: $kendo-signature-line-style;
@@ -57,9 +58,8 @@
 
             .k-signature-line {
                 width: $_line-size;
-                bottom: $_line-offset;
             }
         }
-
     }
+
 }
