feat(skeleton): add fluent styles
Signed-off-by: Dimitar Kalaydzhiev <dkalaydz@progress.com>

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -33,7 +33,7 @@
 @use "color-preview";
 // @use "loader";
 // @use "loading";
-// @use "skeleton";
+@use "skeleton";
 @use "tooltip";
 
 
@@ -195,7 +195,7 @@
     @include color-preview.styles();
     // @include loader.styles();
     // @include loading.styles();
-    // @include skeleton.styles();
+    @include skeleton.styles();
     @include tooltip.styles();
 
 
