feat(avatar): add avatar styles for fluent

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -27,7 +27,7 @@
 
 
 // Indicators
-// @use "avatar";
+@use "avatar";
 @use "badge";
 // @use "chip";
 @use "color-preview";
@@ -189,7 +189,7 @@
 
 
     // Indicators
-    // @include avatar.styles();
+    @include avatar.styles();
     @include badge.styles();
     // @include chip.styles();
     @include color-preview.styles();
