--- a/packages/fluent/scss/card/index.scss
+++ b/packages/fluent/scss/card/index.scss
@@ -4,7 +4,8 @@ $_kendo-module-meta: (
     dependencies: (
         "action-buttons",
         "icon",
-        "typography"
+        "typography",
+        "avatar"
     )
 );
 
