--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -98,7 +98,7 @@
 // Popups and modals
 @use "action-sheet";
 @use "dialog";
-// @use "drawer";
+@use "drawer";
 @use "notification";
 @use "popover";
 // @use "responsivepanel";
@@ -261,7 +261,7 @@
     @include window.styles();
     @include action-sheet.styles();
     @include dialog.styles();
-    // @include drawer.styles();
+    @include drawer.styles();
     @include notification.styles();
     @include popover.styles();
     // @include responsivepanel.styles();
