--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -156,7 +156,7 @@
 
 // Dataviz
 // @use "dataviz";
-// @use "map";
+@use "map";
 @use "orgchart";
 // @use "signature";
 
@@ -318,7 +318,7 @@
 
     // Dataviz
     // @include dataviz.styles();
-    // @include map.styles();
+    @include map.styles();
     @include orgchart.styles();
     // @include signature.styles();
 }
