--- a/packages/utils/scss/layout/_position.scss
+++ b/packages/utils/scss/layout/_position.scss
@@ -33,12 +33,39 @@ $kendo-utils-inset: map-get( $kendo-utils, "inset" ) !default;
 @include generate-utils( bottom-left, ( bottom, left ), $kendo-utils-inset );
 @include generate-utils( bottom-right, ( bottom, right), $kendo-utils-inset );
 
-.#{$kendo-prefix}top-center {
+.#{$kendo-prefix}top-start,
+.#{$kendo-prefix}pos-top-start {
+    top: 0;
+    left: 0;
+}
+
+.#{$kendo-prefix}top-end,
+.#{$kendo-prefix}pos-top-end {
+    top: 0;
+    right: 0;
+}
+
+.#{$kendo-prefix}bottom-start,
+.#{$kendo-prefix}pos-bottom-start {
+    bottom: 0;
+    left: 0;
+}
+
+.#{$kendo-prefix}bottom-end,
+.#{$kendo-prefix}pos-bottom-end {
+    bottom: 0;
+    right: 0;
+}
+
+.#{$kendo-prefix}top-center,
+.#{$kendo-prefix}pos-top-center {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
 }
-.#{$kendo-prefix}middle-left {
+.#{$kendo-prefix}middle-left,
+.#{$kendo-prefix}middle-start,
+.#{$kendo-prefix}pos-middle-start {
     top: 50%;
     left: 0;
     transform: translateY(-50%);
@@ -48,13 +75,22 @@ $kendo-utils-inset: map-get( $kendo-utils, "inset" ) !default;
     left: 50%;
     transform: translateY(-50%);
 }
-.#{$kendo-prefix}middle-right {
+.#{$kendo-prefix}middle-right,
+.#{$kendo-prefix}middle-end,
+.#{$kendo-prefix}pos-middle-end {
     top: 50%;
     right: 0;
     transform: translateY(-50%);
 }
-.#{$kendo-prefix}bottom-center {
+.#{$kendo-prefix}bottom-center,
+.#{$kendo-prefix}pos-bottom-center {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+}
+
+
+@each $side in (top, right, bottom, left) {
+    .#{$kendo-prefix}#{$side},
+    .#{$kendo-prefix}pos-#{$side} { #{$side}: 0; } // sass-lint:disable-line brace-style
 }
