--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -101,7 +101,7 @@
 @use "drawer";
 @use "notification";
 @use "popover";
-// @use "responsivepanel";
+@use "responsivepanel";
 @use "window";
 
 
@@ -264,7 +264,7 @@
     @include drawer.styles();
     @include notification.styles();
     @include popover.styles();
-    // @include responsivepanel.styles();
+    @include responsivepanel.styles();
 
 
     // Navigation
