--- a/packages/fluent/scss/card/index.scss
+++ b/packages/fluent/scss/card/index.scss
@@ -3,6 +3,7 @@ $_kendo-module-meta: (
     name: "card",
     dependencies: (
         "action-buttons",
+        "button",
         "icon",
         "typography",
         "avatar"
